--- a/ui/styles/styles.css
+++ b/ui/styles/styles.css
@@ -86,6 +86,11 @@ input[type="password"] {
   margin-bottom: 0;
 }
 
+.left-column {
+  padding: 0 40px; 
+  margin-bottom: 40px;
+}
+
 /* Custom styles for outlined input fields */
 .input-field input[type="email"],
 .input-field input[type="password"] {
@@ -120,4 +125,12 @@ input.valid[type="email"]:not(.browser-default),
 input.valid[type="password"]:not(.browser-default) {
   box-shadow: none;
   border-bottom-color: rgb(178 180 182);
+}
+
+/* Media query for screens below 600px */
+@media only screen and (max-width: 600px) {
+  .left-column {
+    padding: 0; 
+    margin-bottom: 40px;
+  }
 }
